--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,7 +19,7 @@
     <string name="password_fair">Bof &#8230;</string>
     <string name="password_good">Allez, vous pouvez mieux faire!</string>
     <string name="password_strong">On y arrive &#8230;</string>
-    <string name="password_very_strong">Yeah baby, h4ck3r style !</string>
+    <string name="password_very_strong">Oh oui, h4ck3r style !</string>
 
     <string name="label_login_wallets">Portefeuilles</string>
     <string name="label_credits">Crédits</string>
@@ -125,7 +125,7 @@
     <string name="prompt_password">Mot de passe pour %1$s</string>
     <string name="prompt_fingerprint_auth">Vous pouvez également ouvrir le portefeuille avec votre empreinte digitale.\nMerci de toucher le capteur.</string>
     <string name="prompt_open_wallet">Ouverture du portefeuille &#8230;</string>
-    <string name="bad_fingerprint">Empreinte digitale non reconnue. Résessayez.</string>
+    <string name="bad_fingerprint">Empreinte digitale non reconnue. Réessayez.</string>
     <string name="bad_password">Mot de passe incorrect !</string>
     <string name="bad_saved_password">Mot de passe sauvegardé incorrect.\nVeuillez entrer le mot de passe manuellement.</string>
     <string name="bad_wallet">Portefeuille inexistant !</string>
@@ -145,7 +145,7 @@
     <string name="status_remaining">Blocs restant</string>
     <string name="status_syncing">Analyse :</string>
 
-    <string name="message_camera_not_permitted">Pas de camera = Pas de Scan QR !</string>
+    <string name="message_camera_not_permitted">Pas de caméra = Pas de Scan QR !</string>
 
     <string name="label_copy_viewkey">Clef d\'Audit</string>
     <string name="label_copy_address">Adresse Publique</string>
@@ -153,7 +153,7 @@
     <string name="message_copy_viewkey">Clef d\'audit copiée !</string>
     <string name="message_copy_xmrtokey">Clef copiée !</string>
     <string name="message_copy_address">Adresse du Portefeuille copiée !</string>
-    <string name="message_copy_txid">ID de Transaction copié !</string>
+    <string name="message_copy_txid">ID de Transaction copiée !</string>
     <string name="message_nocopy">Copie désactivée par sécurité !</string>
 
     <string name="message_exchange_failed">Taux de change introuvable !\nUtilisez XMR/XMR ou essayez à nouveau</string>
@@ -161,13 +161,13 @@
     <string name="generate_title">Créer un Portefeuille</string>
     <string name="generate_name_hint">Nom du Portefeuille</string>
     <string name="generate_password_hint">Mot de Passe du Portefeuille</string>
-    <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
+    <string name="generate_fingerprint_hint">Autoriser l\'ouverture du porte-monnaie avec l\'empreinte digitale</string>
     <string name="generate_fingerprint_warn"><![CDATA[
-        <strong>Authentification par empreinte dgitale</strong>
+        <strong>Authentification par empreinte digitale</strong>
         <p>En activant l\'authentification par empreinte digitale, vous pouvez voir le solde de
         votre portefeuille et recevoir des fonds sans entrer de mot de passe.</p>
         <p>Mais pour plus de sécurité, monerujo continuera de vous demander votre mot de passe
-        lorsque vous afficherez les détails du portefeuille ou enverez des fonds.</p>
+        lorsque vous afficherez les détails du portefeuille ou enverrez des fonds.</p>
         <strong>Avertissement de Sécurité</strong>
         <p>Enfin, monerujo vous rappel que quiconque pouvant obtenir votre empreinte digitale
         sera capable de jeter un coup d\'œil au solde de votre portefeuille.</p>
@@ -177,7 +177,7 @@
     ]]></string>
     <string name="generate_bad_passwordB">Phrases secrètes non correspondantes</string>
     <string name="generate_empty_passwordB">La Phrase secrète ne doit pas être vide</string>
-    <string name="generate_buttonGenerate">Faites moi un Portefeuille déjà !</string>
+    <string name="generate_buttonGenerate">Faites-moi un Portefeuille déjà !</string>
     <string name="generate_button_accept">J\'ai noté ces 25 mots !</string>
 
     <string name="generate_wallet_name">Donnez-moi un nom !</string>
@@ -186,7 +186,7 @@
     <string name="generate_wallet_creating">Création du Portefeuille</string>
     <string name="generate_wallet_created">Portefeuille créé</string>
 
-    <string name="generate_restoreheight_error">Entrer un nombre ou une date (YYYY-MM-DD)</string>
+    <string name="generate_restoreheight_error">Entrer un nombre ou une date (AAAA-MM-JJ)</string>
 
     <string name="generate_wallet_type_key">Clefs</string>
     <string name="generate_wallet_type_new">Nouveau</string>
@@ -197,7 +197,7 @@
     <string name="generate_viewkey_hint">Clef d\'audit</string>
     <string name="generate_spendkey_hint">Clef de dépense</string>
     <string name="generate_mnemonic_hint">Phrase Mnémonique</string>
-    <string name="generate_restoreheight_hint">Hauteur ou date de restauration (YYYY-MM-DD)</string>
+    <string name="generate_restoreheight_hint">Hauteur ou date de restauration (AAAA-MM-JJ)</string>
 
     <string name="generate_address_label">Adresse publique</string>
     <string name="generate_viewkey_label">Clef d\'audit</string>
@@ -236,7 +236,7 @@
 
     <string name="tx_list_fee">Frais %1$s</string>
     <string name="tx_list_amount_failed">(%1$s)</string>
-    <string name="tx_list_failed_text">Echoué</string>
+    <string name="tx_list_failed_text">Échoué</string>
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
@@ -285,7 +285,7 @@
 
     <string name="send_sweepall">Envoyer tous les fonds confirmés sur ce compte !</string>
     <string name="tx_subaddress">Sous-adresse</string>
-    <string name="generate_address_label_sub">Sous-adresse publique #%1$d: %2$s</string>
+    <string name="generate_address_label_sub">Sous-adresse publique #%1$d : %2$s</string>
 
     <string name="fab_restore_ledger">Restaurer depuis Ledger Nano</string>
 
@@ -330,14 +330,14 @@
     <string name="node_port_numeric">Doit être un nombre</string>
     <string name="node_port_range">Doit être de 1 à 65535</string>
     <string name="node_fab_add">Ajouter un Nœud</string>
-    <string name="node_refresh_hint">Toucher pour raffraichir !</string>
+    <string name="node_refresh_hint">Toucher pour rafraîchir !</string>
     <string name="node_test_error">ERREUR DE CONNEXION %1$d</string>
     <string name="node_general_error">ERREUR DE CONNEXION</string>
     <string name="node_auth_error">ÉCHEC D\'AUTHENTIFICATION</string>
     <string name="node_result_label">Résultat du test :</string>
     <string name="node_result">Hauteur : %1$s (v%2$d), Ping : %3$.0fms, IP : %4$s</string>
     <string name="node_testing">Test de l\'IP : %1$s &#8230;</string>
-    <string name="node_refresh_wait">Patientez jusq\'à la fin de la recherche</string>
+    <string name="node_refresh_wait">Patientez jusqu\'à la fin de la recherche</string>
     <string name="node_create_hint">Toucher pour sélectionner ou ajouter des nœuds</string>
     <string name="node_pull_hint">Ajouter des nœuds manuellement ou faire glisser vers le bas pour rechercher</string>
     <string name="node_scanning">Recherche de nœuds&#8230;</string>
@@ -347,7 +347,7 @@
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
     <string name="send_address_hint">Destinataire</string>
 
-    <string name="street_sweep_amount">TOTALITÉ!</string> <!-- as in: "everything in the account" = "all the money" -->
+    <string name="street_sweep_amount">TOTALITÉ !</string> <!-- as in: "everything in the account" = "all the money" -->
 
     <string name="menu_ledger_seed">Convertir mnémonique Ledger</string>
     <string name="prompt_ledger_seed">Phrase mnémonique Ledger</string>
@@ -356,4 +356,124 @@
     <string name="prompt_ledger_seed_warn">Saisir votre phrase mnémonique Ledger ici est un risque majeur de sécurité !</string>
 
     <string name="label_restoreheight">Hauteur de restauration</string> <!-- Restore Height -->
+
+    <string name="toast_ledger_start_app">Démarrer l\'application Monero sur %1$s</string>
+
+    <string name="menu_rescan">Réanalyser !</string>
+
+    <string name="onboarding_agree">J\'ai compris !</string>
+    <string name="onboarding_button_next">Suivant</string>
+    <string name="onboarding_button_ready">Je suis prêt !</string>
+
+    <string name="onboarding_welcome_title">Bienvenue sur Monerujo !</string>
+    <string name="onboarding_welcome_information">Cette application vous permet de créer et d\'utiliser des porte-monnaie Monero. Vous pouvez stocker vos précieux moneroj dans ces porte-monnaie.</string>
+    <string name="onboarding_seed_title">Gardez votre phrase mnémonique en sécurité</string>
+    <string name="onboarding_seed_information">La phrase mnémonique donne un accès complet à celui qui le détient. Si vous le perdez, nous ne pouvons pas vous aider à la restaurer et vous perdrez vos précieux moneroj.</string>
+    <string name="onboarding_xmrto_title">Envoyer des cryptomonnaies</string>
+    <string name="onboarding_xmrto_information">Monerujo prend en charge SideShift.ai. Collez simplement ou analysez une adresse BTC, LTC, ETH, DASH ou DOGE et vous enverrez ces cryptomonnaies en envoyant dépensant des XMR.</string>
+    <string name="onboarding_nodes_title">Les nœuds, à votre façon</string>
+    <string name="onboarding_nodes_information">Les nœuds assurent votre connexion au réseau Monero. Choisissez parmi des nœuds publics ou devenez un cypherpunk complet en utilisant le vôtre.</string>
+    <string name="onboarding_fpsend_title">Envoyer avec l\'empreinte digitale</string>
+    <string name="onboarding_fpsend_information">Vous pouvez désormais envoyer des XMR avec simplement votre empreinte digitale si vous l\'avez activé. Pour exiger le mot de passe, désactivez simplement l\'accès par empreinte digitale.</string>
+
+    <string name="menu_daynight">Mode sombre</string>
+    <string-array name="daynight_themes">
+        <item>Auto</item>
+        <item>Jour</item>
+        <item>Nuit</item>
+    </string-array>
+    <string name="gunther_says">Il n\'y a rien ici\nVeuillez créer ou restaurer un porte-monnaie</string>
+
+    <string name="menu_default_nodes">Restaurer les nœuds par défaut</string>
+    <string name="toast_default_nodes">Restauration déjà en cours…</string>
+
+    <string name="node_updated_now">Dernier bloc : il y a %1$d secondes</string>
+    <string name="node_updated_mins">Dernier bloc : il y a %1$d minutes</string>
+    <string name="node_updated_hours">Dernier bloc  : il y a %1$d heures</string>
+    <string name="node_updated_days">Dernier bloc : il y a  %1$d jours</string>
+
+    <string name="shift_noquote">Impossible d\'obtenir un devis</string>
+    <string name="shift_checkamount">Veuillez vérifier le montant et réessayez</string>
+
+    <string name="info_xmrto_ambiguous"><![CDATA[
+        <b>Adresse ambiguë.</b><br/>
+        <i>Veuillez choisir le type ci-dessus.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help"><![CDATA[
+        <b>Veuillez entrer ou analyser une adresse %1$s.</b><br/>
+        <i>Vous enverrez des XMR et le destinataire recevra des %2$s en utilisant le service <b>SideShift.ai</b>.</i>
+    ]]></string>
+
+    <string name="info_xmrto_help_xmr"><![CDATA[
+        <b>Veuillez entrer ou analyser une adresse Monero.</b>
+    ]]></string>
+
+    <string name="subbaddress_title">Sous-adresses</string>
+    <string name="subbaddress_name_hint">Nom de la sous-adresse</string>
+    <string name="max_subaddress_warning">Trop d\'adresse non utilisées - utilisez-en certaines pour permettre d\'en créer davantage !</string>
+    <string name="max_account_warning">Trop de comptes inutilisés - utilisez-en certains pour permettre d\'en créer davantage !</string>
+    <string name="subaddress_tx_label">Transactions pour cette sous-adresse  :</string>
+    <string name="subaddress_notx_label">Aucune transaction pour cette sous-adresse pour l\'instant</string>
+    <string name="subaddress_select_label">Choisissez une sous-adresse</string>
+    <string name="subaddress_details_hint">Appuyez longtemps pour les détails</string>
+    <string name="subaddress_add">Ajouter une sous-adresse</string>
+
+    <string name="menu_delete">Effacer</string><!-- like: "Delete wallet!" -->
+    <string name="delete_failed">Échec de l\'effacement!</string>
+
+    <string name="menu_restore">Importer le porte-monnaie</string>
+    <string name="restore_failed">Échec de l\'importation !</string>
+
+    <string name="menu_deletecache">Réinitialiser le porte-monnaie !</string>
+    <string name="deletecache_alert_message">Ce porte-monnaie sera réinitialisé, perdant toutes les données qui ne sont pas sur la chaîne (telles que les notes, les noms des comptes et des sous-adresses, les clefs des transactions privées &#8230;) ! Utilisez ceci SEULEMENT si le porte-monnaie est corrompu et ne se charge pas !</string>
+
+    <string name="node_tor_error">Tor requis</string>
+    <string name="node_waiting">\u00A0EN ATTENTE POUR LE NŒUD\u00A0</string>
+    <string name="tor_enable_background">"Autoriser les démarrages en arrière-plan" dans les réglages d\'Orbot pour utiliser Tor !</string>
+    <string name="tor_noshift">SideShift.ai ne prend pas en charge Tor.\nDésactivez Tor pour échanger des XMR.</string>
+    <string name="tor_enable">Activer Tor</string>
+
+    <string name="label_seed_offset_encrypt">Chiffrement de la phrase mnémonique (EXPÉRIMENTAL)</string>
+    <string name="seed_offset_hint">Phrase d\'offset de la phrase mnémonique (optionnelle)</string>
+
+    <string name="menu_settings">Réglages</string>
+    <string name="title_iface">Interface</string> <!-- like: User Intreface -->
+    <string name="title_info">Information</string>
+    <string name="setting_daynight">Jour / Nuit</string>
+
+    <string name="setting_theme">Style</string>
+    <string-array name="themes">
+        <item>Classique</item>
+        <item>Baldaŭ</item> <!-- do not translate this one -->
+    </string-array>
+
+    <string name="message_qr_failed">Échec de la création de code QR pour partager !</string>
+
+    <string name="tx_locked">Montant de la transaction bloqué jusqu\'au bloc %1$d (dans %2$d blocs ≈ %3$,.2f jours)</string>
+
+
+    <string name="pocketchange_info">Pour réduire le temps d\'attente lors des dépenses répétées, Monerujo peut créer de la monnaie au prix de frais supplémentaires. Je vais essayer de créer et de maintenir au moins 6 pièces du montant sélectionné.</string>
+    <string name="pocketchange_create_title">Create Change</string>
+
+    <string name="label_apply">APPLIQUER</string>
+
+    <string name="setting_lock">Verrouiller le porte-monnaie en arrière-plan</string>
+
+    <string name="menu_bluetooth">Connecter Sidekick</string>
+    <string name="bluetooth_select_label">Sélectionner l\'appareil Sidekick</string>
+
+    <string name="bluetooth_permissions">Les autorisations Bluetooth sont requises pour connecter votre porte-monnaie Sidekick !</string>
+    <string name="bluetooth_permissions_ok">OK</string>
+    <string name="bluetooth_permissions_settings">Réglages de l\'application</string>
+    <string name="bluetooth_permissions_cancel">Annuler</string>
+
+    <string name="sidekick_pin">PIN : %1$s</string>
+    <string name="sidekick_not_connected">[déconnecté]</string>
+    <string name="sidekick_confirm_tx">Confirmer la transaction</string>
+    <string name="sidekick_network_warning">Le réseau est activé - c\'est un risque de sécurité. Il est recommandé
+        d\'activer le mode avion et de redémarrer l\'application en activant seulement Bluetooth !</string>
+    <string name="open_wallet_sidekick_missing">Veuillez connecter l\'appareil Sidekick</string>
+    <string name="fab_restore_sidekick">Restaurer depuis Sidekick</string>
+    <string name="sidekick_connected">Sidekick connecté</string>
 </resources>
